--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,3 @@
-.slider-vertical {
-  appearance: slider-vertical; /* Set appearance to vertical slider */
-  width: 10px; /* Set the width of the slider track */
-  height: 200px; /* Set the height of the slider track */
-}
-
-.slider-vertical::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 25px;
-  height: 25px;
-  background: #04aa6d;
-  cursor: pointer;
-}
-
-.slider-vertical::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
-  background: #04aa6d;
-  cursor: pointer;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
